Minor update: * temp files created during sorting are automatically cleaned up at the end of the sort. * it is now possible to renamed the track files of samples using db.tracksSaved(f), where f : Sample => String is the renaming function.